set up variables, fixed wrong color assignments

--- a/Style/_element.scss
+++ b/Style/_element.scss
@@ -1,1 +1,7 @@
 @use "./variables" as *;
+
+.table {
+    &__element {
+        
+    }
+}
